styles/index.css
/* ... */
h2 {
  font-size: 1.875rem;
  line-height: calc(2.25 / 1.875);

  @media (width >= 48rem) {
    font-size: 2.25rem;
    line-height: calc(2.75 / 2.25);
  }

  &.subtitle {
    font-family: var(--font-zilla-slab-highlight);
  }
}

h3 {
  font-size: 1.25rem;
  line-height: calc(1.75 / 1.25);

  @media (width >= 48rem) {
    font-size: 1.5rem;
    line-height: calc(2 / 1.5);
  }
}

a {
  color: rgb(var(--color-neonblue));
  color: color-mix(rgb(var(--color-neonblue)) 90%, rgb(var(--color-black)));

  @media (prefers-color-scheme: dark) {
    color: rgb(var(--color-neonblue));
  }
  
  &[href^="https"] {
    text-decoration: underline;
  }

  &:hover {
    filter: brightness(1.25);
  }

  &:visited {
    color: color-mix(rgb(var(--color-darkpurple)) 80%, rgb(var(--color-white)));

    @media (prefers-color-scheme: dark) {
      color: color-mix(rgb(var(--color-darkpurple)) 60%, rgb(var(--color-white)));
    }
  }
}

ul, ol {
  margin-left: 1.5rem;
  margin-bottom: .5rem;
}

p {
  margin-bottom: .5rem;
}

svg {
  vertical-align: text-bottom;
}

details {
  background-color: rgb(var(--color-lightgray) / 15%);
  padding: 1rem;

  @media (prefers-color-scheme: dark) {
  background-color: rgb(var(--color-darkgray) / 15%);
  }

  summary {
    background-color: rgb(var(--color-lightgray) / 25%);
    border-radius: var(--default-border-radius);
    margin: -1rem;
    padding: 1rem;

    @media (prefers-color-scheme: dark) {
    background-color: rgb(var(--color-darkgray) / 25%);
    }
  }

  &[open] {
    summary {
      margin-bottom: 1rem;
    }
  }
}

.sr-only {
  border: 0;
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

/**
 * Decorative elements
**/

.path-container {
  filter: blur(25rem);
  height: 100%;
  position: fixed;
  width: 100%;
  z-index: -1;
}

.path-left,
.path-right {
  clip-path: polygon(-22px 86.6%, -3.44% 47.18%, 9.55% 14.96%, 30.96% 24.57%, 42.41% 4.36%, 95.35% 13.26%, 102.53% 57.75%, 77.2% 104.53%, 26.47% 86.72%);
  opacity: .3;
  position: absolute;
  transform: translate(0) rotate(0) scale(1) skew(0); /* Fix GPU usage */
}

.path-left {
  background-color: rgb(var(--color-neongreen));
  height: 50vh;
  left: -15vw;
  top: 10vh;
  width: 50vh;
  rotate: 45deg;
}

.path-right {
  background-color: rgb(var(--color-neonblue));
  bottom: -10vh;
  height: 40vh;
  right: 2vw;
  rotate: 125deg;
  width: 40vh;
}

.nav-bar-left,
.nav-bar-right {
  position: absolute;
  filter: blur(2.25rem);
  top: -8rem;
  transform: translate(0) rotate(0) scale(1) skew(0); /* Fix GPU usage */
  translate: calc(calc(1 / 2 * 100%) /* 50% */ * -1);
  z-index: -1;

  &::after {
    aspect-ratio: 577/310;
    background-image: linear-gradient(rgb(var(--color-warmred)), rgb(var(--color-neonblue)));
    clip-path: polygon(0 80%, 4% 74%, 8% 4%, 12% 91%, 25% 8%, 40% 64%, 96% 25%, 100% 98%, 48% 4%);
    content: "";
    display: block;
    opacity: .3;
    width: 36rem;
  }
}

.nav-bar-left {
  left: 15rem;
}

.nav-bar-right {
  left: 35rem;
}

/**
 * Common usage classes
**/

.text-light {
  color: rgb(var(--color-white));

  @media (prefers-color-scheme: dark) {
    color: rgb(var(--color-black));
  }
}

.text-dark {
  color: rgb(var(--color-black));

  @media (prefers-color-scheme: dark) {
    color: rgb(var(--color-white));
  }
}

.text-gray {
  color: rgb(var(--color-darkgray));

  @media (prefers-color-scheme: dark) {
    color: rgb(var(--color-lightgray));
  }
}

.text-green {
  color: rgb(var(--color-neongreen));
}

.text-yellow {
  color: rgb(var(--color-lemonyellow));
}

.text-red {
  color: rgb(var(--color-warmred));
}

/**
 * Custom classes
**/

.container {
  margin: 0 auto;
  padding-inline: 2rem;
  width: 100%;

  @media (width >= 40rem) {
    max-width: 40rem;
  }

  @media (width >= 48rem) {
    max-width: 48rem;
  }

  @media (width >= 64rem) {
    max-width: 64rem;
  }

  @media (width >= 80rem) {
    max-width: 80rem;
  }

  @media (width >= 96rem) {
    max-width: 96rem;
  }
}

.heading-banner {
  background-color: rgb(var(--color-black));
  color: rgb(var(--color-white));
  margin-bottom: 2rem;
  padding-block: 2rem;

  @media (width >= 48rem) {
    margin-bottom: 4rem;
    padding-block: 4rem;
  }

  .description {
    font-size: 1.125rem;

    @media (width >= 48rem) {
      font-size: 1.25rem;
    }
  }
}

.footer-banner {
  background-color: rgb(var(--color-black));
  color: rgb(var(--color-white));
  padding: 2rem;
  margin-top: 2rem;
  text-align: center;

  @media (width >= 48rem) {
    padding: 4rem;
    margin-top: 4rem;
    text-align: initial;
  }

  .heart {
    color: rgb(var(--color-warmred));
    fill: rgb(var(--color-warmred) / 30%);
  }
}

.error-page {
  margin: auto 0;
  padding: 4rem;

  @media (width >= 48rem) {
    padding: 6rem;
  }
}

.locale-selector {
  align-items: center;
  display: flex;
  font-weight: 700;
  gap: .5rem;
  justify-content: flex-end;
  margin-bottom: 1rem;

  @media (width >= 80rem) {
    grid-column: span 3 / span 3;
    grid-column-start: 2;
  }

  select {
    background-color: rgb(var(--color-white));
    border-radius: var(--default-border-radius);
    border: var(--pixel) solid rgb(var(--color-darkgray));
    color: rgb(var(--color-black));
    font-weight: 700;
    padding: .5rem 1rem;

    @media (prefers-color-scheme: dark) {
      background-color: rgb(var(--color-black));
      border-color: rgb(var(--color-white));
      color: rgb(var(--color-white));
    }

    &:focus {
      outline: .2rem solid rgb(var(--color-neonblue));
    }
  }
}
/* ... */

